--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -379,21 +379,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/account_block" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cards_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="@dimen/margin_8dp"
+            android:nestedScrollingEnabled="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/instant_withdrawal_tv"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_accounts_card" />
+
         <!--  =========  -->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/no_card_block"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/instant_withdrawal_tv">
+            app:layout_constraintTop_toBottomOf="@+id/cards_recycler">
 
             <ImageView
                 android:id="@+id/card_background"
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
-                android:layout_marginStart="@dimen/margin_24dp"
-                android:layout_marginTop="@dimen/margin_24dp"
-                android:layout_marginEnd="@dimen/margin_24dp"
+                android:layout_marginStart="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_8dp"
+                android:layout_marginEnd="@dimen/margin_16dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -431,16 +446,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/instant_withdrawal_tv"
+            app:layout_constraintTop_toBottomOf="@+id/cards_recycler"
             tools:visibility="visible">
 
             <ImageView
                 android:id="@+id/new_card_background"
                 android:layout_width="match_parent"
                 android:layout_height="207dp"
-                android:layout_marginStart="@dimen/margin_24dp"
-                android:layout_marginTop="@dimen/margin_24dp"
-                android:layout_marginEnd="@dimen/margin_24dp"
+                android:layout_marginStart="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_8dp"
+                android:layout_marginEnd="@dimen/margin_16dp"
                 android:src="@drawable/bg_profile_gradient"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
