--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -92,6 +92,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/write_to_us_view" />
 
+    <TextView
+        android:id="@+id/message_counter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/bg_message_counter"
+        android:fontFamily="sans-serif-medium"
+        android:paddingStart="@dimen/margin_8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="@dimen/margin_8dp"
+        android:paddingBottom="4dp"
+        android:textColor="@color/continue_color"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/chat_history_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/chat_history_view"
+        tools:text="+2" />
+
     <Button
         android:id="@+id/call_button"
         android:layout_width="0dp"
